# PtychoPINN

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  COMMIT_MESSAGE.md  COMMIT_MESSAGE_SCRIPT_FIX.txt  CORRECTED_FIX_SUMMARY.md  Change_history.md  DDP_SPAWN.md  DEBUGGING_SESSION_TENSOR_SHAPE_MISMATCH_2025-07-22.md  EMERGENCY_FIX.md  ENHANCED_LOGGING_PLAN.md  Experiment_saving.md  FINAL_CLEANUP_STEPS.md  FIX_SUMMARY_ITERATIONS_66-74.md  Latent_Model.md  MANIFEST.in  PHASE_4_IMPLEMENTATION_LOG.md  PIE_BUG_ANALYSIS_AND_IMPLEMENTATION_PLAN.md  PREPARE_SH_PARAMETERIZATION_PLAN.md  PROBE_REFACTORING_SUMMARY.md  PROJECT_STATUS.md  PTYCHI_ALGORITHM_COMPARISON_REPORT.md  PYTORCH_INVENTORY_README.md  PYTORCH_INVENTORY_SUMMARY.txt  PYTORCH_WORKFLOW_INVENTORY.md  README  README.md  SINGLE_MODEL_EVALUATION_IMPLEMENTATION_PLAN.md  SYNTHETIC_LOW_PHOTON_DATASET_PLAN.md  TENSORFLOW_ADDONS_REMOVAL_SUMMARY.md  TF_2.18_2.19_Compatibility_Solution.md  TF_2.18_Solution_Summary.md  TF_2.19_Inference_Debug_Summary.md  TF_2.19_Migration_Report.md  TF_Graphics_Implementation_Summary.md  TRACEBACK_LOGGING_ANALYSIS.md  XLA_Integration_Checklist.md  XLA_Translation_README.md  all_modules.txt  (+98 more)
.claude/: settings.local.json
3way_bothhalves_full/: STUDY_SUMMARY.md  study_config.txt
3way_bothhalves_full_2xtest/: STUDY_SUMMARY.md  study_config.txt  study_log.txt
3way_bottomhalf/: STUDY_SUMMARY.md  study_config.txt
3way_bottomhalf_full/: STUDY_SUMMARY.md  study_config.txt
3way_fly64_top_to_bottom_gs1/: STUDY_SUMMARY.md  study_config.txt  study_log.txt
3way_lsqml_2trials/: STUDY_SUMMARY.md  study_config.txt  study_log.txt
3way_lsqml_8192/: STUDY_SUMMARY.md  study_config.txt
3way_lsqml_study/: STUDY_SUMMARY.md  study_config.txt  study_log.txt
3way_ptychi_bottomhalf_full/: STUDY_SUMMARY.md  study_config.txt  study_log.txt
3way_synthetic_10ktest/: STUDY_SUMMARY.md  study_config.txt
3way_synthetic_ptychi/: STUDY_SUMMARY.md  study_config.txt
3way_synthetic_ptychi_1e3_128/: study_config.txt  study_log.txt
3way_synthetic_ptychi_1e4/: STUDY_SUMMARY.md  study_config.txt  study_log.txt
3way_synthetic_ptychi_1e4_128/: STUDY_SUMMARY.md  study_log.txt
3way_synthetic_ptychi_1e4_128_fixed/: reconstructions_aligned_metadata.txt
3way_synthetic_ptychi_1e4_128_gs2/: STUDY_SUMMARY.md  study_config.txt  study_log.txt
3way_synthetic_ptychi_1e4_256/: STUDY_SUMMARY.md  study_config.txt  study_log.txt
3way_synthetic_ptychi_1e4_64/: STUDY_SUMMARY.md  study_config.txt  study_log.txt
3way_synthetic_ptychi_1e4_64_gs2/: STUDY_SUMMARY.md  study_config.txt  study_log.txt
3way_synthetic_ptychi_1e4_cheat/: STUDY_SUMMARY.md  study_config.txt  study_log.txt
3way_synthetic_ptychi_1e4_cheat_256/: STUDY_SUMMARY.md  study_config.txt  study_log.txt
3way_synthetic_ptychi_1e5/: STUDY_SUMMARY.md  study_config.txt  study_log.txt
3way_synthetic_ptychi_3e3/: study_config.txt  study_log.txt
3waysynthtest/: STUDY_SUMMARY.md  study_config.txt
3waysynthtest2/: STUDY_SUMMARY.md  study_config.txt
3waysynthtest2_ptychi/: study_config.txt  study_log.txt
3waysynthtest2_ptychi_2/: STUDY_SUMMARY.md  study_config.txt  study_log.txt
Mtest_M12/: study_config.txt  study_log.txt
Mtest_M20/: study_config.txt  study_log.txt
analysis/: comparison_manifest.json
archive/: 2025-08-15_code_changes_summary.md  2025-08-15_model_persistence_and_inference_refactoring.md  2025-08-15_test_files_created.md  2025-10-17_fix_plan_archive.md  2025-10-20_fix_plan_archive.md  galph_memory_archive.md  n_test_images_implementation_guide.md  tf_ptycho_autoencoder-overlap-2.ipynb.REMOVED.git-id  tf_ptycho_autoencoder-overlap.ipynb  tf_ptycho_autoencoder-overlap.ipynb.REMOVED.git-id  tf_ptycho_autoencoder.ipynb  tf_ptycho_autoencoder.ipynb.REMOVED.git-id
chats/: batched_shift_and_sum_integration_transcript.md  ms_ssim_implementation_conversation.md  test_suite_development_conversation.md
ci/: collect_ignores.txt  known_failures.txt  main-ruleset.json  run_ci_tests.sh
cli_subsample_test/: STUDY_SUMMARY.md  study_config.txt  study_log.txt
cli_subsample_test_1024_8192/: STUDY_SUMMARY.md  study_config.txt
cli_subsample_test_10xosample/: STUDY_SUMMARY.md  study_config.txt
cli_subsample_test_insample/: STUDY_SUMMARY.md  study_config.txt  study_log.txt
comparison_test_gs2/: reconstructions_aligned_metadata.txt  reconstructions_metadata.txt
complete_generalization_study_20250713_230428/: study_config.txt
complete_generalization_study_20250713_230437/: STUDY_SUMMARY.md  study_config.txt
complete_generalization_study_20250713_230459/: STUDY_SUMMARY.md  study_config.txt
complete_generalization_study_20250713_230510/: STUDY_SUMMARY.md  study_config.txt
complete_generalization_study_20250713_231330/: STUDY_SUMMARY.md  study_config.txt
complete_generalization_study_20250713_232808/: STUDY_SUMMARY.md  study_config.txt
complete_generalization_study_20250713_233510/: STUDY_SUMMARY.md  study_config.txt
complete_generalization_study_20250726_194757/: study_config.txt  study_log.txt
complete_generalization_study_20250726_194802/: STUDY_SUMMARY.md  study_config.txt  study_log.txt
complete_generalization_study_20250726_194806/: STUDY_SUMMARY.md  study_config.txt  study_log.txt
configs/: baseline_config.yaml  comparison_config.yaml  (+5 more)
specs/director/: README.md  Run1084_recon3_postPC_shrunk_3.npz  __init__.py  dependencies.json  dependency_detector.py  director.py  director_config.py  director_templates.py  directordepts.json  ideas.txt  patch.sh  ptycho  pyproject.toml  run_director_tests.sh  run_inference.sh  run_tests.sh  run_training.sh  test_context_editable_override.py  test_dependency_detector.py  test_director_cli.py  tprompt.txt  tprompt.yaml  tprompt2.yaml
specs/director/director/: dependency_detector.py  director.py  director_config.py
specs/director/director_tests/: test_director.py  test_end_to_end.py
specs/director/specs/: director_bugfix.yaml  director_bugfix_generic.yaml  director_git_diff.yaml  director_readonly_editable.yaml  director_refactor.yaml
specs/director/src/director/: __init__.py  errors.py
(+4765 files in other folders)
