[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ptychopinn-torch"
version = "0.1.0"
description = "PtychoPINN (PyTorch) - Physics-informed neural network for ptychographic reconstruction"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["ptycho_torch*"]

[tool.ruff]
target-version = "py310"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
markers = [
    "torch: marks tests as requiring PyTorch (deselect with '-m \"not torch\"')",
    "optional: marks tests as requiring optional dependencies",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "mvp: marks tests covering MVP (minimum viable product) field requirements",
    "study: marks tests for study infrastructure (STUDY-SYNTH-FLY64-DOSE-OVERLAP-001)",
    "mini: marks tests as minimal/fast unit tests",
    "integration: marks end-to-end integration smoke tests (project-level alias)",
    "tf_integration: marks TensorFlow end-to-end workflow integration smoke test",
    "grid_lines_hybrid_resnet_integration: marks grid-lines hybrid_resnet integration gate",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--ignore-glob=**/test_*_backup.py",
    "--ignore-glob=**/*.ipynb",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:PyTorch not available.*:UserWarning",
]
