[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "director"
version = "0.1.0"
dependencies = [
    "pydantic>=2.0",
    "openai",
    "aider-chat",
    "jinja2",
    "pyyaml"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=director"
